docs: created deleteOpeningHandler docs
